unpackaged/main/default/objects/OrderItem/fields/Discount_given__c.field-meta.xml
<CustomField>
    <fullName>Discount_given__c</fullName>
    <label>Discount given</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>