unpackaged/main/default/objects/OrderItem/fields/Order_Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Order_Total_Price__c</fullName>
    <formula>(( UnitPrice *  Quantity ) -  Quantity_Discount_Amount__c )+ Sales_Tax_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>