unpackaged/main/default/objects/OrderItem/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <inlineHelpText>copy of product family which can be used in rollups</inlineHelpText>
    <label>Product Family</label>
    <length>255</length>
    <type>Text</type>
</CustomField>