unpackaged/main/default/objects/OrderItem/fields/Quantity_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Discount_Amount__c</fullName>
    <label>Quantity Discount Amount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>