unpackaged/main/default/objects/OrderItem/fields/Sales_Tax__c.field-meta.xml
<CustomField>
    <fullName>Sales_Tax__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sales Tax %</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>