unpackaged/main/default/objects/OrderItem/fields/Update_checkbox__c.field-meta.xml
<CustomField>
    <fullName>Update_checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox is used to trigger workflows and APEX triggers</description>
    <label>Update checkbox</label>
    <type>Checkbox</type>
</CustomField>